step1-3 aligned correctly

--- a/src/public/static/scss/partials/shopping-cart.scss
+++ b/src/public/static/scss/partials/shopping-cart.scss
@@ -39,4 +39,19 @@
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+
+
+  .step-1, .step-3{
+    position: absolute;
+  }
+
+  .step-1{
+    left:-4%;
+  }
+
+  .step-3{
+    right:-5%;
+  }
+
+
 }
